Edited wiki page through web user interface.

--- a/wiki/SummitArrivals.wiki
+++ b/wiki/SummitArrivals.wiki
@@ -4,5 +4,5 @@
 
 When do you arrive to the summit?
 
-
-= Details =
+|| *Who* || *When* || *Flight* ||
+|| Test || May 5th, 17:00 || XY123 from Country ||
